--- a/src/main/resources/templates/incidentes.html
+++ b/src/main/resources/templates/incidentes.html
@@ -19,7 +19,7 @@ and open the template in the editor.
 		<!---------------A partir de aca es el codigo unico de la pagina-------------------------->			
 
 			<div class="col-sm-3 sidenav">
-				<div th:replace="fragments ::navbarside_cot"></div> <!-- Menu Lateral  -->  
+				<div th:replace="fragments ::navbarside_incidentes"></div> <!-- Menu Lateral  -->  
 			</div>
 			<!-- Contenido principal 9 columnas -->
 			<div class="col-sm-9">
