--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -111,6 +111,26 @@
   </div>   
   <!--fin menu lateral fragment-->   
 
+   <!--Menu lateral incidentes fragment-->  
+  <div th:fragment="navbarside_incidentes">
+      <br>
+      <h4>Menu</h4>
+      <ul class="nav nav-pills nav-stacked">
+        <li class="active"><a href="#section1">Listado</a></li>
+        <li><a href="#section2">Altas 2</a></li>
+      </ul><br>
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search Blog..">
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="button">
+            <span class="glyphicon glyphicon-search"></span>
+          </button>
+        </span>
+      </div>
+  </div>   
+  <!--fin menu lateral fragment-->   
+
+
 
   <!--Menu lateral reportes fragment-->  
   <div th:fragment="navbarside_report">
