se agrega el edit del riesgo

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -48,7 +48,7 @@
         <!--Barra que se ve en la web-->
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="#" onClick="cargarContenido('/clientes/');return false;" data-toggle="tooltip" title="Clientes Humanos">Clientes H</a></li>
+            <!-- <li><a href="#" onClick="cargarContenido('/clientes/');return false;" data-toggle="tooltip" title="Clientes Humanos">Clientes H</a></li>
             <li><a href="#" onClick="cargarContenido('/juridicos/');return false;" data-toggle="tooltip" title="Clientes Juridicos">Clientes J</a></li>
             <li><a href="#" onClick="cargarContenido('/operaciones/');return false;">Operaciones</a></li> 
             <li><a href="#" onClick="cargarContenido('/reportes/');return false;">Reportes</a></li>
@@ -56,7 +56,7 @@
             <li><a href="#" onClick="cargarContenido('/cajas/');return false;">Cajas</a></li>
             <li><a href="#" onClick="cargarContenido('/cotizaciones/');return false;">Cotizaciones</a></li>
             <li><a href="#" onClick="cargarContenido('/usuarios/');return false;">Usuarios</a></li>
-            <li><a href="#" onClick="cargarContenido('/incidentes/');return false;">Incidentes</a></li>
+            <li><a href="#" onClick="cargarContenido('/incidentes/');return false;">Incidentes</a></li> -->
             <li><a href="#" onClick="cargarContenido('/riesgos/');return false;">Riesgos</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
