--- a/src/main/resources/templates/riesgo_create.html
+++ b/src/main/resources/templates/riesgo_create.html
@@ -30,7 +30,7 @@ and open the template in the editor.
 									<!-- Form Name -->
 									<fieldset>
 
-
+										<input type="hidden"  th:field="*{riesgo.id}">	
 										<!-- Text input-->
 										<div class="col-sm-2 form-group">
 											<label class="control-label" for="txtOrigen">Origen</label>  
