--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,6 +11,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>La peteaste hijo de puta!!! Consulte con el administrador</div>
+        <div>Ocurrio un error!!! Consulte con el administrador</div>
+        <div class="col-xs-4 visible-xs">
+				<small><a href="/">Volver</a></small>
+			</div>
     </body>
 </html>
