se agrega la descripcion a la probabilidad de ocurrencia y se arregla el calculo del riesgo residual

--- a/src/main/resources/templates/riesgo_create.html
+++ b/src/main/resources/templates/riesgo_create.html
@@ -228,7 +228,7 @@ and open the template in the editor.
 
 									<!-- Select Basic -->
 									<div class="col-sm-3 form-group">
-											<label class="control-label" for="tipoCambio">Riesgo Residual Calificacion</label>
+											<label class="control-label" for="tipoCambio">Riesgo Residual Descripción</label>
 											<div class="">
 												<select id="residual" disabled="disabled" th:field="*{riesgo.riesgoResidualValor.riesgoResidual}" 
 												class="form-control" >
