--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -48,7 +48,7 @@
         <!--Barra que se ve en la web-->
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <!-- <li><a href="#" onClick="cargarContenido('/clientes/');return false;" data-toggle="tooltip" title="Clientes Humanos">Clientes H</a></li>
+            <!-- --><li><a href="#" onClick="cargarContenido('/clientes/');return false;" data-toggle="tooltip" title="Clientes Humanos">Clientes H</a></li>
             <li><a href="#" onClick="cargarContenido('/juridicos/');return false;" data-toggle="tooltip" title="Clientes Juridicos">Clientes J</a></li>
             <li><a href="#" onClick="cargarContenido('/operaciones/');return false;">Operaciones</a></li> 
             <li><a href="#" onClick="cargarContenido('/reportes/');return false;">Reportes</a></li>
@@ -56,7 +56,7 @@
             <li><a href="#" onClick="cargarContenido('/cajas/');return false;">Cajas</a></li>
             <li><a href="#" onClick="cargarContenido('/cotizaciones/');return false;">Cotizaciones</a></li>
             <li><a href="#" onClick="cargarContenido('/usuarios/');return false;">Usuarios</a></li>
-            <li><a href="#" onClick="cargarContenido('/incidentes/');return false;">Incidentes</a></li> -->
+            <li><a href="#" onClick="cargarContenido('/incidentes/');return false;">Incidentes</a></li> 
             <li><a href="#" onClick="cargarContenido('/riesgos/');return false;">Riesgos</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -376,6 +376,65 @@
 </form>
 </div>
 <!-- Fin menu lateral operaciones busqueda -->
+
+<!-- Menu lateral Operaciones Riesgo -->
+<div th:fragment="navbarside_riesgos">
+<form class="" th:action="@{/riesgos/search}" th:object="${searchDTO}" method="POST">
+<fieldset>
+
+<!-- Form Name -->
+<legend>Busqueda</legend>
+
+<!-- Search input-->
+<div class="form-group">
+  <label class=" control-label" for="idOperacion">Codigo Formulario</label>
+  <div class="">
+    <input id="codigoFormulario" th:field="*{codigoFormulario}" type="search"  class="form-control input-md">    
+  </div>
+</div>
+
+<!-- Search input-->
+<div class="form-group">
+  <label class=" control-label" for="numDoc">Responsable</label>
+  <div class="">
+    <input id="responsable" th:field="*{responsable}"  onkeydown="upperCaseF(this)" type="search" placeholder="" class="form-control input-md">
+    
+  </div>
+</div>
+
+<!-- Search input
+<div class="form-group">
+  <label class=" control-label" for="fechaAnalisis">Fecha Analisis</label>
+  <div class="">
+    <input id="fechaAnalisis" th:field="*{fechaAnalisis}" type="search"  onkeydown="upperCaseF(this)" placeholder="" class="form-control input-md">
+    
+  </div>
+</div>
+-->
+<!-- Search input-->
+<div class="form-group">
+  <label class=" control-label" for="origenAmenaza">Origen de Amenza</label>
+  <div class="">
+    <input id="origenAmenaza" th:field="*{origenAmenaza}" type="search"  onkeydown="upperCaseF(this)" placeholder="" class="form-control input-md">
+    
+  </div>
+</div>
+
+
+
+<!-- Button -->
+<div class="form-group">
+
+  <div class="">
+    <button id="singlebutton" name="singlebutton" class="btn btn-primary">Buscar</button>
+    <button type="reset" id="singlebutton"  class="btn btn-default">Limpiar</button>
+  </div>
+</div>
+
+</fieldset>
+</form>
+</div>
+<!-- Fin menu lateral Riesgos busqueda -->
 
 
 <footer class="container-fluid">
