--- a/src/main/resources/templates/riesgo_view.html
+++ b/src/main/resources/templates/riesgo_view.html
@@ -55,7 +55,7 @@ and open the template in the editor.
 										<div class="col-sm-2 form-group">
 											<label class="control-label" for="txtOrigen">Origen</label>  
 											<div class="">
-												<input id="txtOrigen" th:field="*{riesgo.origen}"  name="txtOrigen" type="text" placeholder="" class="form-control input-md" tabIndex="-1" onkeypress="enableSaveButton()">
+												<input id="txtOrigen" disabled="disabled" th:field="*{riesgo.origen}"  name="txtOrigen" type="text" placeholder="" class="form-control input-md" tabIndex="-1" >
 
 											</div>
 										</div>
@@ -64,7 +64,7 @@ and open the template in the editor.
 										<div class="col-sm-2 form-group">
 											<label class=" control-label" for="tipoOp">Origen Amenaza</label>											
 											<div class="">
-												<select id="origenAmenaza" th:field="*{origenAmenaza}"  class="form-control" onchange="form_submit()" >
+												<select id="origenAmenaza" disabled="disabled" th:field="*{origenAmenaza}"  class="form-control"   >
 													<option value="0"></option>
 													<option th:each="origenAmenaza : ${dataMaster.origenAmenazas}" 
 												th:value="${origenAmenaza.id}" th:text="${origenAmenaza.origen}">  </option>
@@ -77,7 +77,7 @@ and open the template in the editor.
 										<div class="col-sm-2 form-group">
 											<label class=" control-label" for="tipoOp">Tipo Amenaza</label>											
 											<div class="">
-												<select id="tipoAmenaza" th:field="*{riesgo.amenaza}"  class="form-control"  >
+												<select id="tipoAmenaza" disabled="disabled" th:field="*{riesgo.amenaza}"  class="form-control"  >
 													<option value="0"></option>
 													<option th:each="amenaza : ${riesgoDTO.amenazas}" 
 												th:value="${amenaza.id}" th:text="${amenaza.tipo}">  </option>
@@ -88,9 +88,9 @@ and open the template in the editor.
 																			
 									<!-- Textarea -->
 									<div class="col-sm-4 form-group">
-										<label class="control-label" for="descripcion">Descripcion Amenaza</label>
+										<label class="control-label"  for="descripcion">Descripcion Amenaza</label>
 										<div class="">                     
-											<textarea class="form-control" id="descripcion" th:field="*{riesgo.descripcion}"  onkeypress="enableSaveButton()"></textarea>
+											<textarea class="form-control" disabled="disabled" id="descripcion" th:field="*{riesgo.descripcion}"   ></textarea>
 										</div>
 									</div>
 										
@@ -100,7 +100,7 @@ and open the template in the editor.
 											<label class="control-label" for="fechaOp">Fecha Analisis</label>  
 											<div class="">
 
-												<input id="fechaAnalisis" th:field="*{fechaAnalisis}" type="date"  onchange="enableSaveButton()"  class="form-control input-md" tabIndex="-1">
+												<input id="fechaAnalisis" disabled="disabled" th:field="*{fechaAnalisis}" type="date"     class="form-control input-md" tabIndex="-1">
 
 
 											</div>
@@ -116,7 +116,7 @@ and open the template in the editor.
 										<div class="col-sm-6 form-group">
 											<label class=" control-label" for="tipoOp">Impacto</label>											
 											<div class="">
-												<select id="impacto" th:field="*{riesgo.impacto}"  class="form-control" onchange="form_submit()" >
+												<select id="impacto" disabled="disabled" th:field="*{riesgo.impacto}"  class="form-control"   >
 													<option value="0"></option>
 													<option th:each="riesgoImpacto : ${dataMaster.impactos}" 
 												th:value="${riesgoImpacto.id}" th:text="${riesgoImpacto.calificacion}">  </option>
@@ -129,7 +129,7 @@ and open the template in the editor.
 										<div class="col-sm-6 form-group">
 											<label class="control-label" for="tipoCambio">Probabilidad de Ocurrencia</label>
 											<div class="">
-												<select id="probabilidad" th:field="*{riesgo.probabilidadOcurrencia}" onchange="form_submit()"
+												<select id="probabilidad" disabled="disabled" th:field="*{riesgo.probabilidadOcurrencia}"  
 												class="form-control" >
 												<option value="0"></option>
 													<option th:each="probabilidadOcurrencia : ${dataMaster.probabilidadesOcurrencias}" 
@@ -149,7 +149,7 @@ and open the template in the editor.
 
 									<!-- Select Basic -->
 									<div class="col-sm-3 form-group">
-											<label class="control-label" for="tipoCambio">Riesgo Inherente Descripción</label>
+											<label class="control-label"  for="tipoCambio">Riesgo Inherente Descripción</label>
 											<div class="">
 												<select id="inherente" disabled="disabled" th:field="*{riesgo.riesgoInherenteValor.riesgoInherente}" 
 												class="form-control" >
@@ -165,7 +165,7 @@ and open the template in the editor.
 									<label class="control-label" for="descripcion">Salvaguarda
 										Descripcion</label>
 									<div class="">
-										<textarea class="form-control" id="salvaguardaDesc" onkeypress="enableSaveButton()"
+										<textarea class="form-control" disabled="disabled" id="salvaguardaDesc"  
 											th:field="*{riesgo.salvaguarda.descripcion}"></textarea>
 									</div>
 								</div>
@@ -175,7 +175,7 @@ and open the template in the editor.
 									<div class="col-sm-2 form-group">
 										<label class="control-label" for="montoRec" id="lblAfectaConf">Afecta Confidencialidad</label>  
 										<div class="form-check">
-											<input class="form-check-input" type="checkbox" id="afconfCheck"  th:field="*{riesgo.afectaConfidencialidad}" onkeypress="enableSaveButton()" >
+											<input class="form-check-input" disabled="disabled" type="checkbox" id="afconfCheck"  th:field="*{riesgo.afectaConfidencialidad}"   >
 
 										</div>
 									</div>
@@ -187,16 +187,16 @@ and open the template in the editor.
 									<div class="col-sm-2 form-group">
 										<label class="control-label" for="montoRec" id="lblAfectaInteg">Afecta Integridad</label>  
 										<div class="">
-											<input class="form-check-input" type="checkbox" id="afinteCheck"  th:field="*{riesgo.afectaIntegridad}" onkeypress="enableSaveButton()" >
+											<input class="form-check-input" disabled="disabled" type="checkbox" id="afinteCheck"  th:field="*{riesgo.afectaIntegridad}"   >
 
 										</div>
 									</div>
 
 									<!-- checkbox-->
 									<div class="col-sm-2 form-group">
-										<label class="control-label" for="montoRec" id="lblAfectaDisp">Afecta Disponibilidad</label>  
+										<label class="control-label"  for="montoRec" id="lblAfectaDisp">Afecta Disponibilidad</label>  
 										<div class="">
-											<input class="form-check-input" type="checkbox" id="afdisoCheck"  th:field="*{riesgo.afectaIntegridad}" onkeypress="enableSaveButton()" >
+											<input class="form-check-input" disabled="disabled" type="checkbox" id="afdisoCheck"  th:field="*{riesgo.afectaIntegridad}"   >
 
 										</div>
 									</div>
@@ -205,7 +205,7 @@ and open the template in the editor.
 									<div class="col-sm-2 form-group">
 											<label class="control-label" for="salvaguardaValor">Valor Salvaguarda</label>
 											<div class="">
-												<select id="salvaguardaVal"  th:field="*{riesgo.salvaguarda.tipo}" onchange="form_submit()"
+												<select id="salvaguardaVal" disabled="disabled" th:field="*{riesgo.salvaguarda.tipo}"  
 												class="form-control" >
 													<option value="0"></option>
 													<option th:each="tipoSalvaguarda : ${dataMaster.tiposSalvaguarda}" 
@@ -254,7 +254,7 @@ and open the template in the editor.
 									<div class="col-sm-3 form-group">
 											<label class="control-label" for="tipoCambio">Riesgo Residual Valor</label>
 											<div class="">
-											<input id="residualValor"  readonly th:field="*{riesgo.riesgoResidualValor.valor}" 
+											<input id="residualValor" disabled="disabled" th:field="*{riesgo.riesgoResidualValor.valor}" 
 											 type="number"  class="form-control input-md" tabIndex="-1">
 										</div>
 									</div>
@@ -290,13 +290,7 @@ and open the template in the editor.
 									<div class="col-sm-6 form-group">
 										<label class="control-label" for="button1id"></label>
 										<div class="">
-											<span th:if="*{not false}"> <!--Set de botones para ver si readOnly=false-->
-											    <button type="submit" id="btnguardar"   name="guardar"   th:disabled="*{not procesado}"  class="btn btn-success" onclick="load()">Guardar</button>
-											     <button type="submit" id="btnaprobar" name="aprobar" th:disabled="*{not aprobacion}"  class="btn btn-default" onclick="enableSel()">Aprobar</button>
-											</span>
-											<span th:if="*{true}">
-												<input id="printUrl" type="hidden" th:value="@{/riesgos/pdf/{id}(id=*{riesgo.id})}">
-											</span>
+										
 											<a href="#" onClick="cargarContenido('/riesgos/');return false;" class="btn btn-danger">Cancelar</a>
 											
 											
@@ -308,7 +302,7 @@ and open the template in the editor.
 										<div class="col-sm-3 form-group ">
 											<label class="control-label" for="cajero">Codigo de Formulario Aceptación de Riesgo</label>  
 											<div class="">
-												<input id="codForm"  th:field="*{riesgo.codigoFormulario}" name="codForm" type="text" placeholder="" class="form-control input-md" tabIndex="-1" onkeypress="enableSaveButton()">
+												<input id="codForm" disabled="disabled"  th:field="*{riesgo.codigoFormulario}" name="codForm" type="text" placeholder="" class="form-control input-md" tabIndex="-1"  >
 											</div>
 										</div>
 										
@@ -317,7 +311,7 @@ and open the template in the editor.
 										<div class="col-sm-3 form-group ">
 											<label class="control-label" for="cajero">Responsables</label>  
 											<div class="">
-												<input id="resp"  th:field="*{riesgo.responsable}" name="resp" type="text" placeholder="" class="form-control input-md" tabIndex="-1" onkeypress="enableSaveButton()">
+												<input id="resp" disabled="disabled" th:field="*{riesgo.responsable}" name="resp" type="text" placeholder="" class="form-control input-md" tabIndex="-1"  >
 											</div>
 										</div>
 								
