--- a/src/main/resources/templates/riesgos.html
+++ b/src/main/resources/templates/riesgos.html
@@ -39,7 +39,8 @@ and open the template in the editor.
 									<th> Responsagle</th>
 									<th> Fecha</th>
 									<th> Origen</th>
-									
+									<th> Creador</th>
+									<th> Auditor</th>
 									<th> </th>										
 									<!--<th> Mnd Base</th>-->
 									<th></th>
@@ -50,12 +51,22 @@ and open the template in the editor.
 									<td th:text="${riesgo.codigoFormulario}"></td>
 									<td th:text="${riesgo.responsable}"></td>
 									<td th:text="${riesgo.fechaAnalisis}"></td>
-									<td th:text="${riesgo.amenaza.origen.origen}"></td>
-									
-													
+									<td th:text="${riesgo.amenaza?.origen?.origen}"></td>
+									<td th:text="${riesgo.usuarioCreador.email}"></td>
+									<td th:text="${riesgo.usuarioAuditor?.email}"></td>
+		
 									<td>
 										<div class="btn-group pull-right">
-											<a class="btn btn-sm btn-primary" th:href="@{/riesgos/edit/{id}(id=${riesgo.id})}" >Editar</a>
+											
+											<span th:if="${riesgo.usuarioAuditor == null && searchDTO.currentUser.email == riesgo.usuarioCreador.email }">
+												<a class="btn btn-sm btn-primary" th:href="@{/riesgos/edit/{id}(id=${riesgo.id})}" >Editar</a>
+											</span>
+											<span th:if="${searchDTO.onlyOneUser || (riesgo.usuarioAuditor == null && searchDTO.currentUser.email != riesgo.usuarioCreador.email) }"> 
+ 												<a class="btn btn-sm btn-primary" th:href="@{/riesgos/edit/{id}(id=${riesgo.id})}">Aprobar</a> 
+											</span>	 
+ 											<span th:if="${riesgo.usuarioAuditor != null && riesgo.usuarioCreador !=null }"> 
+ 												<a class="btn btn-sm btn-primary" th:href="@{/riesgos/view/{id}(id=${riesgo.id})}">Ver</a> 
+ 											</span> 
 											<a class="delete btn btn-sm btn-danger" th:href="@{/riesgos/delete/{id}(id=${riesgo.id})}">borrar</a>
 										</div>
 									</td>
